// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lagu should create a project 1`] = `
"! Set \\"customer\\" option to \\"3\\" from arguments or config
! Set \\"name\\" option to \\"e2e-test-project\\" from arguments or config
! Set \\"gitUrl\\" option to \\"ssh://git@172.17.0.1:2222/git/e2e-test-project.git\\" from arguments or config
! Set \\"openshift\\" option to \\"2\\" from arguments or config
! Set \\"branches\\" option to \\"true\\" from arguments or config
! Set \\"pullrequests\\" option to \\"true\\" from arguments or config
! Set \\"productionEnvironment\\" option to \\"master\\" from arguments or config
Project \\"e2e-test-project\\" created successfully:
Name                   e2e-test-project
Customer               ci-customer
Git URL                ssh://git@172.17.0.1:2222/git/e2e-test-project.git
Active Systems Deploy  lagoon_openshiftBuildDeploy
Active Systems Remove  lagoon_openshiftRemove
Branches               true
Pull Requests          true
Openshift              ci-local
Created                                   "
`;

exports[`lagu should delete the project 1`] = `"Project \\"e2e-test-project\\" deleted successfully!"`;

exports[`lagu should init 1`] = `
"! Set \\"overwrite\\" option to \\"true\\" from arguments or config
! Set \\"project\\" option to \\"ci-github\\" from arguments or config
! Set \\"api\\" option to \\"http://localhost:3000\\" from arguments or config
! Set \\"ssh\\" option to \\"localhost:2020\\" from arguments or config
! Set \\"token\\" option to \\"/Users/k/p/lagoon/cli/src/__tests__/fixtures/.lagoon-token\\" from arguments or config
Creating file '/Users/k/p/lagoon/cli/src/__tests__/fixtures/.lagoon.yml'...
Configuration file created!"
`;

exports[`lagu should list all environments for a project (project read from .lagoon.yml) 1`] = `
"Name              master
Environment Type  production
Deploy Type       branch
Created
Updated                              "
`;

exports[`lagu should list all environments for a project (using --project option) 1`] = `
"Name              master
Environment Type  production
Deploy Type       branch
Created
Updated                              "
`;

exports[`lagu should list all projects 1`] = `
"Project                Git URL                                                 Branches  Pull Requests  Created
ci-bitbucket           ssh://git@172.17.0.1:2222/git/bitbucket.git           true      true
ci-drupal              ssh://git@172.17.0.1:2222/git/drupal.git              true      true
ci-drupal-galera       ssh://git@172.17.0.1:2222/git/drupal-galera.git       true      true
ci-drupal-postgres     ssh://git@172.17.0.1:2222/git/drupal-postgres.git     true      true
ci-elasticsearch       ssh://git@172.17.0.1:2222/git/elasticsearch.git       true      true
ci-env-limit           ssh://git@172.17.0.1:2222/git/node.git                true      true
ci-features            ssh://git@172.17.0.1:2222/git/features.git            true      true
ci-features-subfolder  ssh://git@172.17.0.1:2222/git/features-subfolder.git  true      true
ci-github              ssh://git@172.17.0.1:2222/git/github.git              true      true
ci-gitlab              ssh://git@172.17.0.1:2222/git/gitlab.git              true      true
ci-multiproject1       ssh://git@172.17.0.1:2222/git/multiproject.git        true      true
ci-multiproject2       ssh://git@172.17.0.1:2222/git/multiproject.git        true      true
ci-nginx               ssh://git@172.17.0.1:2222/git/nginx.git               true      true
ci-node                ssh://git@172.17.0.1:2222/git/node.git                true      true
ci-rest                ssh://git@172.17.0.1:2222/git/rest.git                true      true                              "
`;

exports[`lagu should list no environments for a project with none (using --project option) 1`] = `"Name  Environment Type  Deploy Type  Created  Updated"`;

exports[`lagu should list the new project among all projects 1`] = `
"Project                Git URL                                                 Branches  Pull Requests  Created
ci-bitbucket           ssh://git@172.17.0.1:2222/git/bitbucket.git           true      true
ci-drupal              ssh://git@172.17.0.1:2222/git/drupal.git              true      true
ci-drupal-galera       ssh://git@172.17.0.1:2222/git/drupal-galera.git       true      true
ci-drupal-postgres     ssh://git@172.17.0.1:2222/git/drupal-postgres.git     true      true
ci-elasticsearch       ssh://git@172.17.0.1:2222/git/elasticsearch.git       true      true
ci-env-limit           ssh://git@172.17.0.1:2222/git/node.git                true      true
ci-features            ssh://git@172.17.0.1:2222/git/features.git            true      true
ci-features-subfolder  ssh://git@172.17.0.1:2222/git/features-subfolder.git  true      true
ci-github              ssh://git@172.17.0.1:2222/git/github.git              true      true
ci-gitlab              ssh://git@172.17.0.1:2222/git/gitlab.git              true      true
ci-multiproject1       ssh://git@172.17.0.1:2222/git/multiproject.git        true      true
ci-multiproject2       ssh://git@172.17.0.1:2222/git/multiproject.git        true      true
ci-nginx               ssh://git@172.17.0.1:2222/git/nginx.git               true      true
ci-node                ssh://git@172.17.0.1:2222/git/node.git                true      true
ci-rest                ssh://git@172.17.0.1:2222/git/rest.git                true      true
e2e-test-project       ssh://git@172.17.0.1:2222/git/e2e-test-project.git    true      true                              "
`;

exports[`lagu should log an error for a non-existent project (using --project option) 1`] = `"No project 'non-existent-project' found."`;

exports[`lagu should log in 1`] = `
"Logging in to lagoon at lagoon@localhost:2020...
Logged in successfully."
`;

exports[`lagu should log out when logged in 1`] = `"Logged out successfully."`;

exports[`lagu should not error on logout when not logged in 1`] = `"Logged out successfully."`;

exports[`lagu should not show deleted project details (using --project option) 1`] = `"No project 'e2e-test-project' found."`;

exports[`lagu should show customer details (project read from .lagoon.yml) 1`] = `
"Customer details for project 'ci-github':
Name                ci-customer
Comment             null
Deploy Private Key  √
Users               4, 5
Created                                "
`;

exports[`lagu should show customer details (using --project option) 1`] = `
"Customer details for project 'ci-multiproject1':
Name                ci-customer
Comment             null
Deploy Private Key  √
Users               4, 5
Created                                "
`;

exports[`lagu should show newly-created project details (using --project option) 1`] = `
"Name                   e2e-test-project
Customer               ci-customer
Git URL                ssh://git@172.17.0.1:2222/git/e2e-test-project.git
Active Systems Deploy  lagoon_openshiftBuildDeploy
Active Systems Remove  lagoon_openshiftRemove
Branches               true
Pull Requests          true
Openshift              ci-local
Created                                   "
`;

exports[`lagu should show project details (read from .lagoon.yml) 1`] = `
"Name                   ci-github
Customer               ci-customer
Git URL                ssh://git@172.17.0.1:2222/git/github.git
Active Systems Deploy  lagoon_openshiftBuildDeploy
Active Systems Remove  lagoon_openshiftRemove
Branches               true
Pull Requests          true
Openshift              ci-local
Created                                   "
`;
